--- a/public/html/index.html
+++ b/public/html/index.html
@@ -14,11 +14,11 @@
                     <div>
                         <div class="form-group">
                             <label for="publicKeyForAdd">Enter publicKey</label>
-                            <input type="text" class="form-control" id="publicKeyForAdd">
+                            <textarea id="publicKeyForAdd" rows="15" cols="65"></textarea><br/>
+                            <label for="privateKeyForAdd">Enter privateKey</label>
+                            <textarea id="privateKeyForAdd" rows="15" cols="65"></textarea><br/>
                             <label for="info">Enter info</label>
                             <input type="text" class="form-control" id="info">
-                            <label for="sign">Enter privateKey</label>
-                            <input type="text" class="form-control" id="privateKey">
                         </div>
                         <button onclick="addHuman()" class="btn btn-primary">Add</button>
                         <br><br>
@@ -26,7 +26,9 @@
                     <div>
                         <div class="form-group">
                             <label for="publicKeyForGet">Enter publicKey</label>
-                            <input type="text" class="form-control" id="publicKeyForGet">
+                            <textarea id="publicKeyForGet" rows="15" cols="65"></textarea><br/>
+                            <label for="privateKeyForGet">Enter privateKey</label>
+                            <textarea id="privateKeyForGet" rows="15" cols="65"></textarea><br/>
                         </div>
                         <button onclick="getHuman()" class="btn btn-primary">Get Info</button> 
                         <br><br>
@@ -38,6 +40,10 @@
             </div>
         </div>
         <script type="text/javascript" src="/js/jquery.min.js"></script>
+        <script type="text/javascript" src="/js/jsencrypt.min.js"></script>
+        <script type="text/javascript" src="/js/sha256.js"></script>
+        <script type="text/javascript" src="/js/encoder.js"></script>
+        <script type="text/javascript" src="/js/decoder.js"></script>
         <script type="text/javascript" src="/js/WebDataController.js"></script>
     </body>
 </html>
