addImg 함수를 addHuman으로 합치고 인자 3개의 컨트랙트로 만듬

--- a/dab/public/html/addHumanPage.html
+++ b/dab/public/html/addHumanPage.html
@@ -32,7 +32,7 @@
                             </div>
                             
                             <input type="text" id="test" class="test" name="test" readonly="readonly" value="">
-                            <button onclick="addImg()" class="btn btn-primary">ipfs</button>
+                            <!-- button onclick="addImg()" class="btn btn-primary">ipfs</button -->
                             <img src="" id="img" alt="">
                         </div>
 
