--- a/public/html/getHumanPage.html
+++ b/public/html/getHumanPage.html
@@ -27,6 +27,7 @@
                     <div class="alert alert-info" role="alert" id="message">
                         You can either submit file's details and get information about it.
                     </div>
+                    <img src="" id="testimage" alt="">
                 </div>
             </div>
         </div>
@@ -36,5 +37,6 @@
         <script type="text/javascript" src="/js/encoder.js"></script>
         <script type="text/javascript" src="/js/decoder.js"></script>
         <script type="text/javascript" src="/js/WebDataController.js"></script>
+        <script type="text/javascript" src="/js/aes.js"></script>
     </body>
 </html>
